Task: added .idea file

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 
 <div class="jumbotron bg-white text-center justify-content-center align-items-center mb-0">
   <div class="container">
-    <h1 class="display-3">Boilerplate Bootstrap 4+  with Gulp 4 </h1>
+    <h1 class="display-3">Boilerplate Bootstrap 4+  hello with Gulp 4 </h1>
     <p class="lead">Basic is a Bootstrap 4+ boilerplate with Gulp4, cross-env, Sass, sourcemaps, concat, CSS & HTML minification, uglify, image optimization, template partials, BrowserSync.</p>
     <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
   </div>
