--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <partial src="header.html"></partial>
+<partial src="main_menu.html"></partial>
 
 <div class="jumbotron bg-white text-center justify-content-center align-items-center mb-0">
   <div class="container">
