--- a/src/about.html
+++ b/src/about.html
@@ -1,25 +1,11 @@
 <partial src="header.html"></partial>
+<partial src="main_menu.html"></partial>
 
+<main role="main" class="container">
 
-<div class="jumbotron bg-white text-center justify-content-center align-items-center mb-0">
-  <div class="container">
-    <h1 class="display-3">About</h1>
-    <p class="lead">Basic is a responsive A Bootstrap 4.4.1 Boilerplate with Gulp, Sass, BrowserSync.</p>
+  <div class="content">
+    <h1>My About Page</h1>
+    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
   </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-md-4">
-    <img class="img-fluid" src="https://images.unsplash.com/photo-1579032365451-d20e00c0ed23?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60">
-    </div>
-    <div class="col-md-4">
-      <img class="img-fluid" src="https://images.unsplash.com/photo-1579032365437-9f9d275b0db0?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60">
-    </div>
-    <div class="col-md-4">
-      <img class="img-fluid"  src="https://images.unsplash.com/photo-1579033060982-1bb5b083f4fa?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60">
-    </div>
-  </div>
-</div>
-    
 
-<partial src="footer.html"></partial>
+</main><!-- /.container -->
