Task: Bootstrap Carousel

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,109 @@
 <partial src="header.html"></partial>
 <partial src="main_menu.html"></partial>
+<main role="main">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class=""></li>
+            <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+            <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img/hello.jpg" class="img-fluid" style="opacity: .5" alt="Responsive image">
+                <div class="container">
+                    <div class="carousel-caption text-left text-dark">
+                        <h1>Project 1</h1>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
+                            gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        <p><a class="btn btn-lg btn-primary" href="project1.html" role="button">View Project 1</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="img/hender.jpg" class="img-fluid" style="opacity: .5" alt="Responsive image">
+                <div class="container">
+                    <div class="carousel-caption text-left text-dark">
+                        <h1>Project 2</h1>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
+                            gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        <p><a class="btn btn-lg btn-primary" href="project2.html" role="button">View Project 2</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="img/unsplash.jpg" class="img-fluid" style="opacity: .5" alt="Responsive image">
+                <div class="container">
+                    <div class="carousel-caption text-left text-dark">
+                        <h1>Project 3</h1>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
+                            gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        <p><a class="btn btn-lg btn-primary" href="project3.html" role="button">View Project 3</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card shadow-sm">
+                    <div class="card-img-top mx-auto pt-3 pb-3 h-75 w-75"><img class="rounded-circle img-fluid" src="img/hello.jpg"></div>
+                    <div class="card-header card-subtitle mb-2">
+                        <h3>Callout 1</h3>
+                    </div>
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi non fermentum justo. Phasellus
+                        sollicitudin urna quis libero pellentesque, et sagittis nibh venenatis. Vestibulum iaculis arcu quis
+                        ipsum rutrum, eget finibus odio tempus. Nullam placerat facilisis tellus, ac sagittis libero mollis
+                        at. Praesent convallis mauris nulla, at rutrum urna venenatis eget. Fusce varius nibh eget hendrerit
+                        consequat.
+                    </div>
+                </div>
 
-<main role="main" class="container">
+            </div>
+            <div class="col-lg-4">
+                <div class="card shadow-sm">
+                    <div class="card-img-top mx-auto pt-3 pb-3 h-75 w-75"><img class="rounded-circle img-fluid" src="img/hello.jpg"></div>
+                    <div class="card-header card-subtitle mb-2 ">
+                        <h3>Callout 1</h3>
+                    </div>
+                    <div class="card-body text-muted">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi non fermentum justo. Phasellus
+                        sollicitudin urna quis libero pellentesque, et sagittis nibh venenatis. Vestibulum iaculis arcu quis
+                        ipsum rutrum, eget finibus odio tempus. Nullam placerat facilisis tellus, ac sagittis libero mollis
+                        at. Praesent convallis mauris nulla, at rutrum urna venenatis eget. Fusce varius nibh eget hendrerit
+                        consequat.
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card shadow-sm">
+                    <div class="card-img-top mx-auto pt-3 pb-3 h-75 w-75"><img class="rounded-circle img-fluid" src="img/hello.jpg"></div>
+                    <div class="card-header card-subtitle mb-2">
+                        <h3>Callout 1</h3>
+                    </div>
+                    <div class="card-body ">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi non fermentum justo. Phasellus
+                        sollicitudin urna quis libero pellentesque, et sagittis nibh venenatis. Vestibulum iaculis arcu quis
+                        ipsum rutrum, eget finibus odio tempus. Nullam placerat facilisis tellus, ac sagittis libero mollis
+                        at. Praesent convallis mauris nulla, at rutrum urna venenatis eget. Fusce varius nibh eget hendrerit
+                        consequat.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-  <div class="content">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-  </div>
+    </div>
+
 
 </main><!-- /.container -->
+<partial src="footer.html"></partial>
